Branch feature finished
At login, recognizes if a username exists or if a password is correct for one username, giving independent error messages

--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,8 @@ body > header a {
 #posts article .comments:after {
   content: ' comments';
 }
+
+#error_messages {
+  font-weight: bold;
+  color: red;
+}
