--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,40 @@
 :root {
-    --dark: #1A1A1A;
-    --light: #F0F0F0;
-    --red: #FF0000;
-    --orange: #FF6000;
-    --yellow: #FFFF00;
-    --green: #92FF00;
-    --blue: #3DC3F8;
-    --pink: #EA499C;
+  --light1: #f0f0f0;
+  --light2: #d9d9d9;
+  --dark1: #444444;
+  --dark2: #292929;
+  --dark3: #666666;
+  --blue1: #2763a7;
+  --blue2: #4484ce;
+  --blue3: #67a6ef;
+  --yellow1: #ecc200;
+  --yellow2: #fedc3d;
+  --yellow3: #ffeb8c;
+  --green1: #087a50;
+  --green2: #0aae72;
+  --green3: #44eaad;
+  --red1: #ba2a1f;
+  --red2: #f14234;
+  --red3: #ff8278;
+  --pink1: #d54a78;
+  --pink2: #fa578d;
+  --pink3: #ffa9c5;
 }
 
 body {
   width: auto;
   margin: 0;
-  background-color: var(--light);
+  background-color: var(--light1);
+  font-family: 'Open Sans';
 }
 
 body > header {
-  background-color: var(--dark);
+  background-color: var(--dark2);
   padding: 1em;
 }
 
 body > footer {
-  background-color: var(--dark);
+  background-color: var(--dark2);
   padding: 1em;
   color: white;
 }
@@ -31,9 +44,13 @@ body > header a {
   text-decoration: none;
 }
 
+body > header #logo {
+  font-family: 'Comfortaa';
+}
+
 #signup form > input{
-  background-color: var(--light);
-  border-color: var(--light);
+  background-color: var(--light1);
+  border-color: var(--light1);
   border-radius: 3px;
   border-style: solid;
   border-width: 1px;
@@ -41,38 +58,235 @@ body > header a {
   text-decoration-color: white;
 }
 
-#posts article {
-  height: 5em;
+#signup {
+  align-self: center;
 }
 
+#search {
+  align-self: center;
+}
+
+#search form > input{
+  background-color: var(--light2);
+  border-color: var(--light1);
+  border-radius: 3px;
+  border-style: solid;
+  border-width: 1px;
+  padding: 7px;
+  text-decoration-color: white;
+}
+
+#posts {
+  margin-left: 2em;
+}
+
+#comments {
+  margin-left: 2em;
+}
+
+#sidebar {
+  background-color: var(--light2);
+  border-radius: 20px;
+  margin-right: 2em;
+}
+
+#posts article {
+  border-bottom-style:solid;
+  border-bottom-color: var(--light2);
+}
+
+#posts article .voting {
+  width: 2em;
+  margin-right: 1em;
+  margin-bottom: 1em;
+}
+
+#comments article {
+  border-bottom-style:solid;
+  border-bottom-color: var(--light2);
+}
+
+#comments article .voting {
+  width: 2em;
+  margin-right: 1em;
+  margin-bottom: 1em;
+}
+
+#sort {
+  margin-top: 1em;
+  display: flex;
+  flex-direction: row;
+}
+
+#sort li a{
+  text-decoration: none;
+  color: black;
+}
+
+#sort li {
+  border-color: var(--dark1);
+  border-radius: 100px;
+  border-style: solid;
+  border-width: 1px;
+  padding: 7px;
+  text-align: center;
+  margin-right: 1em;
+}
+
+#sidebar{
+  padding: 0em 1em;
+  text-align: justify;
+}
+
+#sidebar h1{
+  background-color: var(--dark2);
+  border-radius: 20px;
+  color: var(--light1);
+  text-align: center;
+}
+
+#sidebar .post > button{
+  border-color: var(--light1);
+  border-radius: 100px;
+  border: 2px;
+  border-style: solid;
+  padding: 9px;
+  padding-left: 2em;
+  padding-right: 2em;
+  text-align: center;
+  margin-right: 1em;
+}
+
+#sidebar .post > button > a{
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'Open Sans';
+  color: var(--dark2);
+}
+
+body > header #channels {
+  /* background-color: var(--light1); */
+  margin: 2em;
+  align-self: center;
+}
+
+body > header #channels ul {
+  display: flex;
+  flex-direction: row;
+}
+
+body > header #channels li {
+  border-color: var(--light1);
+  border-radius: 100px;
+  border-style: solid;
+  border-width: 1px;
+  padding: 7px;
+  text-align: center;
+  margin-right: 1em;
+}
+
+body > header #channels li:nth-child(1){
+  background-color: var(--blue2);
+}
+
+body > header #channels li:nth-child(2){
+  background-color: var(--red2);
+}
+
+body > header #channels li:nth-child(3){
+  background-color: var(--yellow2);
+}
+
+body > header #channels li:nth-child(4){
+  background-color: var(--green2);
+}
+
+body > header #channels li:nth-child(5){
+  background-color: var(--pink2);
+}
 
 #posts article .voting > button {
-  margin: 0;
+  width: 30px;
+  height: 30px;
+  border-width: 0;
+  border-radius: 100px;
 }
 
 #posts article .upvote {
-  background-color: green;
-  border-width: 0px;
+  background-color: var(--green2);
 }
 
 #posts article .votes {
-  align-self: center;
   text-align: center;
 }
 
 #posts article .downvote {
-  background-color: red;
-  border-width: 0px;
+  background-color: var(--red2);
 }
 
 #posts article .voting > button:active {
   background-color: black;
 }
 
-#posts article > img {
+#posts article .thumbnail {
+  margin-left: 1em;
+  width:5em;
+  height:5em;
+}
+
+
+
+#comments article .voting > button {
+  width: 30px;
+  height: 30px;
+  border-width: 0;
+  border-radius: 100px;
+}
+
+#comments article .upvote {
+  background-color: var(--green2);
+}
+
+#comments article .votes {
+  text-align: center;
+}
+
+#comments article .downvote {
+  background-color: var(--red2);
+}
+
+#comments article .voting > button:active {
+  background-color: black;
+}
+
+#comments article .thumbnail {
+  margin-left: 1em;
+  width:5em;
+  height:5em;
+}
+
+body #sort li:nth-child(1):before{
+  content: url(/images/hot.svg);
+}
+
+body #sort li:nth-child(2):before{
+  content: url(/images/new.svg);
+}
+
+body #sort li:nth-child(3):before{
+  content: url(/images/top.svg);
+}
+
+#posts article .thumbnail > img {
   object-fit: cover;
   width:100%;
   height:100%;
+}
+
+#posts article > header, #posts article > footer  {
+  margin-left: 2em;
+  margin-top: 0;
 }
 
 #posts article .username:after {
@@ -83,38 +297,17 @@ body > header a {
   content: ' comments';
 }
 
-#comments article {
-  height: 5em;
-}
 
 
-#comments article .voting > button {
-  margin: 0;
-}
-
-#comments article .upvote {
-  background-color: green;
-  border-width: 0px;
-}
-
-#comments article .votes {
-  align-self: center;
-  text-align: center;
-}
-
-#comments article .downvote {
-  background-color: red;
-  border-width: 0px;
-}
-
-#comments article .voting > button:active {
-  background-color: black;
-}
-
-#comments article > img {
+#comments article .thumbnail > img {
   object-fit: cover;
   width:100%;
   height:100%;
+}
+
+#comments article > header, #comments article > footer  {
+  margin-left: 2em;
+  margin-top: 0;
 }
 
 #comments article .username:after {
@@ -127,4 +320,54 @@ body > header a {
 
 #error_messages {
   color: red;
+}
+
+.dropbtn {
+    background-color: #F0F0F0;
+    color: #1A1A1A;
+    border-radius: 100px;
+    border: 2px;
+    border-color: white;
+    border-style: solid;
+    padding: 9px;
+    padding-left: 2em;
+    padding-right: 2em;
+    text-align: center;
+    margin-right: 1em;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #F0F0F0;
+    min-width: 160px;
+    border-radius: 10px;
+    box-shadow: 0px 8px 16px 0px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    border-radius: 10px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #A1A1A1
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #A1A1A1;
 }
