--- a/css/comments.css
+++ b/css/comments.css
@@ -5,7 +5,7 @@
   color: #19191a;
   width: 90%;
   padding: 10px;
-  border-bottom-width: 5px !important;
+  border-left-width: 5px !important;
 }
 
 
@@ -20,8 +20,15 @@
 
 .write-comment{
 	margin-left: 10px;
-	border: none;
-	background: none;
+	height: 20px;
+  border-radius: 3px 3px 3px 3px;
+  border-style: none solid solid none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+  background: #A9A9A9;
+  color: #555555;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 0.7em;
+  line-height: 1.4em;
 	cursor:pointer;
 }
 
@@ -50,22 +57,38 @@
 
 
 .comment-input-div > .comment-input:focus {
-    background: #FFFFFF;
-    outline-width: 0;
+  background: #FFFFFF;
+  outline-width: 0;
 }
 
 .comment-input-div > .post-comment-btn {
-  	height: 30px;
-  	border-radius: 6px 6px 6px 6px;
-  	border-style: none solid solid none;
-  	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  	background: #A9A9A9;
-  	color: #555555;
-  	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  	font-size: 1em;
-  	line-height: 1.4em;
-  	padding: 5px 8px;
-  	position: absolute;
-  	left: 12px;
-  	bottom: 5px;
+  height: 30px;
+  border-radius: 6px 6px 6px 6px;
+  border-style: none solid solid none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+  background: #A9A9A9;
+  color: #555555;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1em;
+  line-height: 1.4em;
+  padding: 5px 8px;
+  position: absolute;
+  left: 12px;
+  bottom: 5px;
+  cursor:pointer;
+}
+
+.replyBtn{
+  height: 20px;
+  border-radius: 3px 3px 3px 3px;
+  border-style: none solid solid none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+  background: #A9A9A9;
+  color: #555555;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 0.7em;
+  line-height: 1.4em;
+  cursor:pointer;
+ 
+
 }
