--- a/css/layout.css
+++ b/css/layout.css
@@ -121,3 +121,32 @@ body > header {
   grid-column: start / end;
   grid-row: info / end;
 }
+
+
+/* comment layout */
+
+
+.comment-voting {
+  position: relative;
+  float: left;
+  width: 10px;
+  height: 50px;
+  padding-right: 20px;
+}
+.votes{
+  padding-left: 5px;
+
+}
+
+.comment-body {
+
+  
+}
+
+#comment-info {
+
+  
+}
+
+
+
