--- a/css/layout.css
+++ b/css/layout.css
@@ -12,7 +12,7 @@
 body {
   display: grid;
   grid-template-columns: [start] 4fr [middle] 1.25fr [end];
-  grid-template-rows: [start] 7em [nav sort search] auto [posts sidebar] auto [footer] auto [end];
+  grid-template-rows: [start] 7em [nav sort search] auto [posts search-results sidebar] auto [footer] auto [end];
 }
 
 /* main layout */
@@ -39,6 +39,11 @@ body > header {
 
 #posts {
   grid-row: posts / footer;
+  grid-column: start / middle;
+}
+
+#search-results {
+  grid-row: search-results / footer;
   grid-column: start / middle;
 }
 
