--- a/css/layout.css
+++ b/css/layout.css
@@ -12,7 +12,7 @@
 body {
   display: grid;
   grid-template-columns: [start] 4fr [middle] 1.25fr [end];
-  grid-template-rows: [start] 7em [nav sort search-results search] auto [posts sidebar] auto [footer] auto [end];
+  grid-template-rows: [start] 7em [nav sort search-results search error] auto [posts sidebar] auto [footer] auto [end];
 }
 
 /* main layout */
@@ -52,6 +52,11 @@ body > header {
   left:10px;
   top:10px;
   width: 100%;
+}
+
+#error-block{
+  grid-row: error / end;
+  grid-column: start / end;
 }
 
 body > footer {
