--- a/css/style.css
+++ b/css/style.css
@@ -470,3 +470,11 @@ body > header #channels li:nth-child(5), #search-channels li:nth-child(5n){
   align-items: center;
   margin: 2.5em auto 2.5em;
 }
+
+
+
+.post-trashcan{
+  width: 16px;
+  height: 16px;
+  cursor:pointer;
+}
