--- a/css/comments.css
+++ b/css/comments.css
@@ -78,6 +78,40 @@
   cursor:pointer;
 }
 
+.comment-input-div > .edit-comment-btn {
+  height: 30px;
+  border-radius: 6px 6px 6px 6px;
+  border-style: none solid solid none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+  background: #A9A9A9;
+  color: #555555;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1em;
+  line-height: 1.4em;
+  padding: 5px 8px;
+  position: absolute;
+  left: 12px;
+  bottom: 5px;
+  cursor:pointer;
+}
+
+.comment-input-div > .edit-post-btn {
+  height: 30px;
+  border-radius: 6px 6px 6px 6px;
+  border-style: none solid solid none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+  background: #A9A9A9;
+  color: #555555;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1em;
+  line-height: 1.4em;
+  padding: 5px 8px;
+  position: absolute;
+  left: 12px;
+  bottom: 5px;
+  cursor:pointer;
+}
+
 
 .replyBtn{
   height: 20px;
@@ -98,4 +132,15 @@
   height: 16px;
   cursor:pointer;
 }
+
+.comment-edit{
+  width: 16px;
+  height: 16px;
+  cursor:pointer;
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+
+
 
