--- a/css/layout.css
+++ b/css/layout.css
@@ -12,7 +12,7 @@
 body {
   display: grid;
   grid-template-columns: [start] 4fr [middle] 1.25fr [end];
-  grid-template-rows: [start] 7em [nav sort search-big search error] auto [posts search-results] auto [sidebar] auto [footer] auto [end];
+  grid-template-rows: [start] 7em [nav sort search-big search error single-post] auto [posts search-results] auto [sidebar] auto [footer] auto [end];
 }
 
 /* main layout */
@@ -33,12 +33,17 @@ body > header {
 }
 
 #sidebar {
-  grid-row-end: sidebar
+  grid-row: posts / sidebar
   grid-column: middle / end;
 }
 
 #posts, #search-posts, #channel-posts {
   grid-row: posts / footer;
+  grid-column: start / middle;
+}
+
+#single-post {
+  grid-row: single-post / footer;
   grid-column: start / middle;
 }
 
@@ -109,33 +114,33 @@ body > header #channels, body > header #channel {
 
 /* post blocks layout */
 
-#posts article, #search-posts article, #channel-posts article {
+#posts article, #single-post article, #search-posts article, #channel-posts article {
   display: grid;
   grid-template-columns: [voting] 2em [image] 5em [start] auto [end];
   grid-template-rows: [start] auto [info] auto [end];
   margin-bottom: 1em;
 }
 
-#posts article .voting, #search-posts article .voting, #channel-posts article .voting {
+#posts article .voting, #single-post article .voting, #search-posts article .voting, #channel-posts article .voting {
   grid-column: voting / image;
   grid-row: start / end;
   display: flex;
   flex-direction: column;
 }
 
-#posts article .thumbnail, #search-posts article .thumbnail, #channel-posts article .thumbnail {
+#posts article .thumbnail, #single-post article .thumbnail, #search-posts article .thumbnail, #channel-posts article .thumbnail {
   grid-column: image / start;
   grid-row: start / end;
 }
 
-#posts article > header .title, #search-posts article > header .title, #channel-posts article > header .title {
+#posts article > header .title, #single-post article > header .title, #search-posts article > header .title, #channel-posts article > header .title {
   grid-column: start / end;
   grid-row: start / info;
   margin: 0;
   font-size: 1.5em;
 }
 
-#posts article > footer, #search-posts article > footer, #channel-posts article > footer {
+#posts article > footer, #single-post article > footer, #search-posts article > footer, #channel-posts article > footer {
   grid-column: start / end;
   grid-row: info / end;
 }
