--- a/css/comments.css
+++ b/css/comments.css
@@ -17,6 +17,10 @@
 	padding: 5px;
 }
 
+.comment-votes{
+  margin-left: 10px;
+}
+
 
 .write-comment{
 	margin-left: 10px;
@@ -39,7 +43,6 @@
 
 .comment-input-div >.comment-input {
   margin-top: 10px;
-  margin-left: 10px;
   width: 90%;
   height: 100px;
   background: rgba(0, 0, 0, 0.07);
@@ -72,10 +75,8 @@
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
-  position: absolute;
-  left: 12px;
-  bottom: 5px;
-  cursor:pointer;
+  margin-left: 15px;
+  cursor: pointer;
 }
 
 .comment-input-div > .edit-comment-btn {
@@ -90,7 +91,7 @@
   line-height: 1.4em;
   padding: 5px 8px;
   position: absolute;
-  left: 55px;
+  left: 47px;
   bottom: 5px;
   cursor:pointer;
 }
@@ -139,6 +140,10 @@
   cursor:pointer;
   margin-right: 10px;
   margin-left: 5px;
+}
+
+.write-comment-div{
+  margin-left: 30px;
 }
 
 
